--- a/Source/Blueberry.Desktop.WindowsApp/App.xaml
+++ b/Source/Blueberry.Desktop.WindowsApp/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="Source.App"
+﻿<Application x:Class="Blueberry.Desktop.WindowsApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Blueberry.Desktop.WindowsApp"
